@@ -1,0 +1,17 @@
+package samples.testng.powermock647;
+
+import org.powermock.core.classloader.annotations.PrepareForTest;
+import org.powermock.modules.testng.PowerMockTestCase;
+import org.testng.annotations.Test;
+
+/**
+ *
+ */
+@PrepareForTest(SomeClass.class)
+public class SkipExceptionTest extends PowerMockTestCase{
+
+    @Test
+    public void testSkipException() throws Throwable {
+        new SomeClass().throwSkipException();
+    }
+}
